# Rust-labs-2022-23

./: README.md
lab1/capitalize/: .gitignore
lab1/capitalize/src/: main.rs  tests.rs
lab1/luhn/: .gitignore
lab1/luhn/.exercism/: metadata.json
lab1/luhn/src/: lib.rs  main.rs
lab1/minesweeper/: Cargo.toml
lab1/minesweeper/.exercism/: metadata.json
lab1/minesweeper/src/: lib.rs  main.rs
lab1/minesweeper/tests/: minesweeper.rs
lab2/es1/: es1.txt
lab2/es1/src/: es1.txt  lib.rs  main  main.c  main.rs
lab2/es2/: Cargo.toml
lab2/es2/src/: lib.rs  main.rs
lab2/es3/: Cargo.toml
lab2/es3/src/: lib.rs
lab3/circular-buffer-v2/.exercism/: metadata.json
lab3/circular-buffer-v2/src/: lib.rs  main.rs
lab3/circular-buffer/src/: lib.rs  main.rs
lab3/es2/src/: lib.rs  main.rs
lab3/es2/tests/: tests.rs
lab3/es3/: Cargo.toml
lab3/es3/src/: main.rs
lab3/prova/src/: main.rs
lab3/react/.exercism/: metadata.json
lab3/react/src/: lib.rs
lab4/es1/: Cargo.toml
lab4/es1/src/: main.rs
lab4/es2/: Cargo.toml
lab4/es2/src/: lib.rs  main.rs
lab4/es3/src/: lib.rs
lab4/teoria/: Cargo.toml
lab4/teoria/src/: main.rs
