[package]
name = "es2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
bincode = "1.3.3"
fcntl = "0.1.0"
chrono = "0.4.31"
rand = "0.8.5"

[[bin]]
name = "producer"
test = false
bench = false

[[bin]]
name = "consumer"
test = false
bench = false
